Fix addon text on mobile for meandall

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -864,7 +864,7 @@ reservation-hotel-details {
             padding: 20px 0 10px 25px;
             text-align: left;
             .viewport-mobile & {
-              padding: 25px 0 0 25px;
+              padding: 0 0 0 25px;
             }
           }
           >p {
